<resources>
    <string name="app_name">quizapp</string>
    <string name="quizOne">Q1. What is the automotive company name which logo is consist of 4 rings?</string>
    <string name="quizTwo">Q2. What is the city name where the company in Q1 locates?</string>
    <string name="quizThree">Q3. Which brands belong to VolksWagen group?</string>
    <string name="quizThree_CheckBoxOne_Text">Audi</string>
    <string name="quizThree_CheckBoxTwo_Text">BMW</string>
    <string name="quizThree_CheckBoxThree_Text">Bentley</string>
    <string name="quizThree_CheckBoxFour_Text">Melendez Benz</string>
    <string name="quizFour">Q4. Which automotive company locates its headquarter in California?</string>
    <string name="checkAnswer">Check your answer!</string>
    <string name="quizFour_radio1">Tesla</string>
    <string name="quizFour_radio2">General Motors</string>
</resources>
